# antiprism

./: .exrc  .gitignore  AUTHORS  COPYING  Doxyfile  Doxyfile.in  Makefile.am  NEWS  README  README.git  acinclude.m4  bootstrap  config.h.in  configure.ac  configure.in  pad_file.xml  vers_script.txt
aview/: Makefile.am  antiview.1  antiview.cc  disp_poly_gl.cc  disp_poly_gl.h  displaypoly_gl.cc  displaypoly_gl.h  gl_stroke_font.cc  gl_stroke_font.h  gl_writer.cc  gl_writer.h  stipple.cc  vw_glut.cc  vw_glut.h
base/: Makefile.am  antiparser.cc  antiprism.h  bbox.cc  bbox.h  boundbox.cc  boundbox.h  c_hull.cc  canonic.cc  canonical.cc  col_geom.cc  col_geom.h  col_map.cc  col_map.h  col_read.cc  col_val.cc  col_val.h  color.cc  color.h  coloring.cc  coloring.h  colormap.cc  colormap.h  const.h  crds_read.cc  disp_poly.cc  disp_poly.h  displaypoly.cc  displaypoly.h  dual.cc  elemprops.h  faces.cc  geodesic.cc  geodesic.h  geom.cc  geom.h  geom_utils.cc  geom_utils.h  geometry.cc  geometry.h  (+120 more)
base/expreval/: Makefile.am  README_expreval  defs.h  except.cc  except.h  expr.cc  expr.h  expreval.h  func.cc  funclist.cc  funclist.h  node.cc  node.h  parser.cc  parser.h  vallist.cc  vallist.h
base/muparser/: Makefile.am  muParser.cc  muParser.h  muParserBase.cc  muParserBase.h  muParserBytecode.cc  muParserBytecode.h  muParserCallback.h  muParserDLL.h  muParserDef.h  muParserFixes.h  muParserInt.h  muParserStack.h  muParserTemplateMagic.h  muParserTest.cc  muParserTest.h  muParserToken.h  muParserTokenReader.cc  muParserTokenReader.h
base/qhull/: Makefile.am  geom_r.cc  io_r.cc  libqhull_r.h  mem_r.h  merge_r.cc  poly2_r.cc  random_r.cc  rboxlib_r.cc
base/tesselator/: Makefile.am  dict-list.h  dict.cc  dict.h  geom.cc  geom.h  gl.h  glu.h  gluos.h  memalloc.cc  memalloc.h  mesh.cc  mesh.h  normal.cc  normal.h  priorityq-heap.h  priorityq-heap_c.h  priorityq-sort.h  priorityq.cc  priorityq.h  render.cc  render.h  sweep.cc  sweep.h  tess.cc  tess.h  tessmono.cc  tessmono.h
debian/: changelog  control  copyright  files  gpb.conf  rules
doc/: README
doc/css/: README
doc/images/: README
doc/lib_doc/html/: README
doc_src/: about.gtm  c_end_frame.tpl  c_head.tpl  c_start_frame.tpl  common_defs.inc  common_defs.inc.in  d_end_frame.tpl  d_head.tpl  d_start_frame.tpl  doc  doc.gtp  doxygen_footer.html  doxygen_header.html  gtml  index.gtm  man_extra.txt  man_extra2.txt  resources.gtm  www.gtp
doc_src/download/: index.gtm  news_file.gtm  readme_file.gtm
doc_src/examples/: cub_oct.gtm  icosahx.gtm  index.gtm
doc_src/programs/: EXTRAS_README  antiview.gtm  bravais.gtm  canonical.gtm  col_util.gtm  color_maps.gtm  conv_hull.gtm  conway.gtm  dome_layer.gtm  edges.gtm  extras_readme.gtm  geodesic.gtm  import_export.gtm  index.gtm  iso_delta.gtm  iso_kite.gtm  jitterbug.gtm  kaleido.gtm  kcycle.gtm  lat_grid.gtm  lat_util.gtm  leonardo.gtm  m2off.gtm  miller.gtm  minmax.gtm  mmop_origami.gtm  n_icons.gtm  named_cols.gtm  obj2off.gtm  off2crds.gtm  off2dae.gtm  off2m.gtm  off2obj.gtm  off2pov.gtm  off2txt.gtm  off2vrml.gtm  off_align.gtm  off_color.gtm  off_color_radial.gtm  off_format.gtm  (+29 more)
doc_src/programs/css/: antiprism_doc.css
m4/: ac_python_devel.m4  fltk.m4
python/: Doxyfile  Makefile.am  antiprism.i
python/distutils/: MANIFEST.in  setup.py.in
share/col_lights/: default  lg3d  pastel  rgbw
share/col_maps/: 5levels  5x5x5  5x5x5o  alt_names.txt  html  iscc  jumble  ms  rainbow  rainbowc  rainbowg  res_by_angle_overrides  res_model_overrides  spectrum  vga  x11
share/extras/: README
share/extras/python/: anim_spin.py  helix.py  trunc_scale.py  trunc_switch.py
share/extras/shell_scripts/: demo.bat  demo.sh  dual_pair.sh
share/models/: alt_names.txt  huitzilopochtli  skilling  skilling_d
share/pov_inc/: nexorade.inc  rot90.inc  rotegrity.inc
src/: Makefile.am  bravais.1  bravais.cc  canonical.1  canonical.cc  canonical_common.cc  canonical_common.h  col_util.1  col_util.cc  color_common.cc  color_common.h  common.cc  common.h  conv_hull.1  conv_hull.cc  conway.1  conway.cc  geodesic.1  geodesic.cc  help.h  iso_delta.1  iso_delta.cc  iso_kite.1  iso_kite.cc  jitterbug.1  jitterbug.cc  kcycle.1  kcycle.cc  kiteohedron.1  kiteohedron.cc  lat_grid.1  lat_grid.cc  lat_grid_common.cc  lat_grid_common.h  lat_util.1  lat_util.cc  lat_util_common.cc  lat_util_common.h  lattice_grid.cc  lattice_grid.h  (+83 more)
src_extra/: Makefile.am  dome_layer  dome_layer.1  dome_layer.cc  jitterbug.1  jitterbug.cc  kaleido.1  kaleido.cc  lat_grid.1  lat_grid.cc  m2off.1  m2off.cc  mmop_origami.1  mmop_origami.cc  off2m.1  off2m.cc  off2txt.1  off2txt.cc  off_normals.1  off_normals.cc  poly_weave.1  poly_weave.cc  radial.1  radial.cc  rotegrity.1  rotegrity.cc  spidron.1  spidron.cc  string_art.1  string_art.cc  sweep_edges.1  sweep_edges.cc  twist.1  twist.cc
